# feedForwardNeuralNetwork

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  activationFunctions.c  activationFunctions.h  localTypes.h  network.c  network.h  neuron.c  neuron.h
tests/: CMakeLists.txt  activationFunctionsTests.cpp  networkTests.cpp  neuronTests.cpp
